# that-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  OPERATORS.md  README.md  docker-compose.yaml
crates/that-agent/: Cargo.toml
crates/that-agent/skills/agent-orchestrator/: SKILL.md
crates/that-agent/skills/channel-adapter/: SKILL.md
crates/that-agent/skills/channel-notify/: SKILL.md
crates/that-agent/skills/channel-whitelist/: SKILL.md
crates/that-agent/skills/cluster-management/references/: cilium.md  operations-k8s.md
crates/that-agent/skills/self-eval/: SKILL.md
crates/that-agent/skills/self-eval/references/: scenario-schema.md
crates/that-agent/skills/skill-creator/: SKILL.md
crates/that-agent/skills/telegram-format/: SKILL.md
crates/that-agent/skills/that-plugins/: SKILL.md
crates/that-agent/src/: auth.rs  cli.rs  default_skills.rs  hooks.rs  lib.rs  provider_registry.rs  transcription.rs
crates/that-agent/src/agent_loop/: mod.rs  openai_compatible.rs  openrouter.rs  types.rs
crates/that-agent/src/agents/: mod.rs
crates/that-agent/src/channels/: channel.rs  config.rs  factory.rs  hook.rs  inbound.rs  message.rs  registry.rs  router.rs  tool.rs
crates/that-agent/src/channels/adapters/: gateway.rs  gateway_routes.rs  http.rs  mod.rs  telegram.rs
crates/that-agent/src/commands/: agent.rs  code.rs  daemon.rs  eval.rs  exec.rs  fs.rs  human.rs  memory.rs  mod.rs  search.rs  secrets.rs  session.rs  skill.rs  tools.rs
crates/that-agent/src/config/: mod.rs
crates/that-agent/src/control/: cli.rs
crates/that-agent/src/eval/: cli.rs  mod.rs
crates/that-agent/src/eval/judge/: mod.rs
crates/that-agent/src/eval/report/: mod.rs
crates/that-agent/src/eval/runner/: mod.rs
crates/that-agent/src/eval/scenario/: mod.rs
crates/that-agent/src/eval/storage/: mod.rs
crates/that-agent/src/orchestration/: channel_mode.rs  config.rs  discovery.rs  execution.rs  generation.rs  mod.rs  preamble.rs  setup.rs  support.rs  tui_session.rs
crates/that-agent/src/plugins/: cluster.rs  mod.rs
crates/that-agent/src/sandbox/: backend.rs  client.rs  docker.rs  mod.rs  scope.rs
crates/that-agent/src/session/: mod.rs
crates/that-agent/src/skills/: mod.rs
crates/that-agent/src/tool_dispatch/: mod.rs  skill.rs  typed.rs
crates/that-agent/src/tools/: mod.rs
crates/that-agent/src/tools/cli/: mod.rs
crates/that-agent/src/tools/config/: init.rs  mod.rs
crates/that-agent/src/tools/daemon/: mod.rs  rpc.rs  session.rs
crates/that-agent/src/tools/impls/: dispatch.rs  exec.rs  path_guard.rs  skills.rs
crates/that-agent/src/tools/index/: mod.rs  pagerank.rs  references.rs  schema.rs
crates/that-agent/src/tools/output/: tokenizer.rs
crates/that-agent/src/tools/skills/: SKILL.md
crates/that-agent/src/tui/: channel_adapter.rs  palette.rs
crates/that-agent/src/workspace/: mod.rs
crates/that-channels/: Cargo.toml
crates/that-channels/src/: channel.rs  config.rs  factory.rs  lib.rs  message.rs  registry.rs  router.rs
crates/that-channels/src/adapters/: gateway.rs  gateway_routes.rs  http.rs  mod.rs  telegram.rs
crates/that-cli/: Cargo.toml
crates/that-cli/src/: cli.rs  main.rs
crates/that-cli/src/commands/: agent.rs  code.rs  daemon.rs  exec.rs  fs.rs  human.rs  memory.rs  mod.rs  search.rs  secrets.rs  session.rs  skill.rs  tools.rs
crates/that-core/: Cargo.toml
crates/that-core/examples/: oauth_test.rs
crates/that-core/skills/agent-orchestrator/: SKILL.md
crates/that-core/skills/agent-orchestrator/references/: patterns.md
crates/that-core/skills/cluster-management/: SKILL.md
crates/that-core/skills/cluster-management/references/: networking-docker.md  networking-k8s.md  operations-docker.md  tailscale-docker.md  tailscale-k8s.md
crates/that-core/skills/git-workspace/: SKILL.md
crates/that-core/skills/git-workspace/references/: worktree-local.md
crates/that-core/skills/self-eval/references/: e2e-patterns.md
crates/that-core/skills/task-manager/: SKILL.md
crates/that-core/skills/that-plugins/: SKILL.md
crates/that-core/src/: audit.rs  auth.rs  default_skills.rs  hooks.rs  lib.rs  model_catalog.rs  observability.rs  orchestration.rs  provider_registry.rs  transcription.rs  tui.rs
crates/that-core/src/agent_loop/: anthropic.rs  hook.rs  mod.rs  openai.rs  openai_compatible.rs  openrouter.rs  types.rs
crates/that-core/src/agents/: mod.rs
crates/that-core/src/config/: mod.rs
crates/that-core/src/control/: cli.rs
crates/that-core/src/heartbeat/: mod.rs
crates/that-core/src/orchestration/: channel_mode.rs  config.rs  discovery.rs  execution.rs  generation.rs  handlers.rs  hooks.rs  mod.rs  preamble.rs  setup.rs  support.rs  tui_session.rs
crates/that-core/src/plans/: mod.rs
crates/that-core/src/session/: mod.rs
crates/that-core/src/skills/: mod.rs
crates/that-core/src/tasks/: mod.rs
crates/that-core/src/tools/: skill.rs  typed.rs
crates/that-core/src/tui/: channel_adapter.rs  formatting.rs  hook.rs  mod.rs  modal.rs  stats.rs  terminal.rs
crates/that-core/src/workspace/: mod.rs
crates/that-eval/: Cargo.toml
crates/that-eval/src/: main.rs
crates/that-eval/src/judge/: mod.rs
crates/that-eval/src/runner/: mod.rs
crates/that-git-server/: Cargo.toml
crates/that-git-server/src/: acl.rs  api.rs  expiry.rs  git.rs  hooks.rs  lib.rs  main.rs  state.rs
crates/that-git-server/tests/: integration.rs
crates/that-plugins/: Cargo.toml
crates/that-plugins/src/: cluster.rs  deploy.rs  lib.rs
crates/that-sandbox/: Cargo.toml
crates/that-sandbox/src/: docker.rs  kubernetes.rs  lib.rs
crates/that-tools/: Cargo.toml
crates/that-tools/benches/: benchmarks.rs
crates/that-tools/skills/references/: exec.md  fs.md  index.md  search.md
crates/that-tools/src/: lib.rs
crates/that-tools/src/cli/: mod.rs
crates/that-tools/src/index/: mod.rs
crates/that-tools/src/output/: budget.rs  compaction.rs  json_analysis.rs  mod.rs  render.rs  types.rs
crates/that-tools/src/tools/: dispatch.rs  exec.rs  mod.rs  path_guard.rs  skills.rs
(+115 files in other folders)
