[package]
name = "that-channels"
description = "Multi-channel routing and adapters for agent communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# HTTP client for external APIs (Telegram)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async futures utilities
futures = "0.3"

# Base64 encoding for binary payloads in HTTP SSE responses
base64 = "0.22"

# HTTP gateway adapter
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
dashmap = "6"
uuid = { workspace = true }
rand = { workspace = true }
url = "2"
