[package]
name = "that-cli"
description = "Unified CLI for agent orchestration and tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "that"
path = "src/main.rs"

[features]
default = ["tui", "code-analysis"]
tui = ["that-core/tui"]
code-analysis = ["that-tools/code-analysis"]

[dependencies]
# Workspace crates
that-tools = { path = "../that-tools", default-features = false }
that-core = { path = "../that-core", default-features = false }
that-plugins = { path = "../that-plugins" }

# Shared workspace dependencies
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

# Secrets encryption
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = { workspace = true }

# Env loading
dotenvy = "0.15"

# File walking (used in handle_symbols for directory traversal)
ignore = "0.4"
