[package]
name = "that-core"
description = "Orchestration runtime for autonomous agent sessions, skills, and multi-turn loops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:tui-textarea", "dep:crossterm", "dep:arboard"]

[dependencies]
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }

# Local deps
that-tools = { path = "../that-tools", version = "0.1.0" }
that-channels = { path = "../that-channels", version = "0.1.0" }
that-plugins = { path = "../that-plugins", version = "0.1.0" }
that-sandbox = { path = "../that-sandbox", version = "0.1.0" }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP/WebSocket clients for owned agentic loop providers
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# Ensure rustls has an explicit process-level crypto provider backend.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Base64 encoding for multimodal image payloads
base64 = "0.22"

# Env
dotenvy = "0.15"

# TUI (optional — gated behind the `tui` feature)
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"], optional = true }
tui-textarea = { version = "0.7", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }

# Clipboard (optional — gated behind the `tui` feature)
arboard = { version = "3", optional = true }
