[package]
name = "that-eval"
description = "Deterministic eval harness with scenario runner, assertions, and LLM judge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "that-eval"
path = "src/main.rs"

[dependencies]
# Local crates
that-core    = { path = "../that-core", version = "0.1.0" }
that-tools   = { path = "../that-tools", version = "0.1.0" }

# Workspace deps
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
chrono     = { workspace = true }
dirs       = { workspace = true }
uuid       = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = "0.15"
reqwest            = { version = "0.12", features = ["json"] }
