[package]
name = "that-git-server"
description = "Lightweight Git Smart HTTP server with multi-agent coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "that-git-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
