[package]
name = "that-plugins"
description = "Cluster-aware plugin registry for autonomous agent services on Kubernetes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
that-sandbox = { path = "../that-sandbox" }
