[package]
name = "that-sandbox"
description = "Kubernetes execution boundary for sandboxed autonomous agent operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
